# control_operativo_app

./: .gitignore  AI_CONTEXT.md  DOCUMENTO_MAESTRO.md  README.md  app.py  pyproject.toml
.github/workflows/: tests.yml
.streamlit/: config.toml
src/kiki_control/: __init__.py
src/kiki_control/adapters/: __init__.py  column_aliases.py  contracts.py  mercado_libre.py  mercado_libre_ventas.py  mercado_pago.py
src/kiki_control/domain/: commercial_link.py  commercial_operation.py  control_consolidado.py  enums.py  financial_movement.py  models.py  official_sale.py  reconciliation.py
src/kiki_control/exporting/: __init__.py  excel.py
src/kiki_control/ingestion/: file_inspector.py  metadata.py
src/kiki_control/linking/: __init__.py  commercial.py  control_financiero.py
src/kiki_control/normalization/: __init__.py  locale_ar.py  mercado_libre.py  mercado_pago.py  (+2 more)
tests/: test_commercial_linking.py  test_confirmed_export_columns.py  test_control_consolidado.py  test_control_consolidado_diagnostics.py  test_control_consolidado_presentation_lists.py  test_control_consolidado_streamlit_presentation.py  test_excel_exporting.py  test_explanations.py  test_file_inspector.py  test_file_metadata.py  test_locale_ar.py  test_mercado_libre_normalization.py  test_mercado_libre_ventas_normalization.py  test_mercado_pago_normalization.py  test_mercado_pago_values.py  test_presentation.py  test_reconciliation_engine.py  test_reconciliation_grouping.py  test_reconciliation_rules.py  test_review_cases.py  test_session_cycle.py  test_source_detection.py  test_streamlit_integration.py
(+14 files in other folders)
