[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kiki-control-financiero"
version = "0.1.0"
description = "Base técnica para inspección estructural de archivos de Mercado Libre y Mercado Pago."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "openpyxl",
    "streamlit>=1.36",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["kiki_control", "kiki_control.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
